# bitcoin_grabber

./: Cargo.toml  README.md
src/: grabber.rs  main.rs
ui/: appwindow.slint
