[package]
name = "bitcoin_grabber"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] } 
rust_decimal = "1.36.0"
serde = { version = "1.0.209", features = ["derive"] }
slint = "1.7.2"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
slint-build = "1.7.2"
